fixed z-index of instructions and frame

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -237,6 +237,7 @@ iframe {
 	padding-right: 12.5vw;
 	padding-top: 5vh;
 	padding-bottom: 5vh;
+	z-index: -1;
 }
 
 .instructions {
@@ -245,4 +246,5 @@ iframe {
 	overflow-x: wrap;
 	overflow-y: scroll;
 	background-color: white;
+	z-index: 1000;
 }
